Add spree currency and custom calculator

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,5 +18,5 @@ en:
       prices_saved: Prices successfully saved
     new_currency: New Currency
     exchange_rate: Exchange Rate
-    apply_to_all_products: Apply Exchange Rate To All Products
+    apply_to_all_products: Apply All Exchange Rates To Products
     applied: Applied To Products
